--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <img src="Img/logo.png" alt="logo" class = "logo">
                 </div>
                 <div class = "navtab">
-                    <div class = "aboutus"> About Us </div>
+                    <div class = "aboutus"> <a href="about us.html" target="_blank">About Us</a> </div>
                     <div class = "intract"> Interact </div>
-                    <div class = "trainers"> Trainers </div>
+                    <div class = "trainers"> <a href="trainers.html">Trainers </a></div>
                     <div class = "contactus" > Contact Us</div>
             </div>
                
