--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class = "navtab">
                     <div class = "aboutus"> <a href="about us.html" target="_blank">About Us</a> </div>
                     <div class = "intract"> Interact </div>
-                    <div class = "trainers"> <a href="trainers.html">Trainers </a></div>
+                    <div class = "trainers"> <a href="trainers.html" target="_blank">Trainers </a></div>
                     <div class = "contactus" > Contact Us</div>
             </div>
                
