--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class = "navtab">
                     <div class = "aboutus"> <a href="about us.html" target="_blank">About Us</a> </div>
-                    <div class = "intract"> Interact </div>
+                    <div class = "intract"> <a href="interact.html" target="_blank">Interact</a></div>
                     <div class = "trainers"> <a href="trainers.html" target="_blank">Trainers </a></div>
                     <div class = "contactus" > Contact Us</div>
             </div>
@@ -35,7 +35,7 @@
                     <span class = "heading-primary-sub" style="font-family: sans-serif ;">Family Where Life Begins And Love Never Ends</span>
                 </h1>
 
-                <a href = "#" class = "btn btn-white btn-animated"> Interact</a>
+                <a href = "interact.html" target="_blank" class = "btn btn-white btn-animated">Interact</a>
             </div>
 
             <div class = " donatebox"> <h3 class = " donate">Donate</h1>  </div>
